Z-index fix

--- a/scss/legacy/stylesheet.scss
+++ b/scss/legacy/stylesheet.scss
@@ -260,6 +260,7 @@ ol>.block-children {
     background: var(--colorNeutral900);
     opacity: 0.4;
     z-index: 0;
+    border-radius: var(--pageHeaderRadius);
 }
 
 .container-title {
@@ -290,6 +291,8 @@ ol>.block-children {
     flex-direction: column;
     min-height: var(--pageHeaderHeight);
     justify-content: center;
+    position: relative;
+    z-index: 1;
 
     h1.page-title {
         padding: 0px;
